--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -16,6 +16,29 @@
     "* Accuracy on training data :  99.89 %\n",
     "* Accuracy on test data :  99.91 %"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1)Importing the dependancies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np #numpy arrays\n",
+    "import pandas as pd #use to dataframe\n",
+    "from sklearn.model_selection import train_test_split #split data\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score #evaluvate model\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from matplotlib import gridspec"
+   ]
   }
  ],
  "metadata": {
@@ -23,7 +46,7 @@
    "hash": "d9a6414fa631c028c434667d182c0b79dc634ffcd06f52fc304061a2c0b9ef26"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -37,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
