Data Collection Process

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -39,6 +39,23 @@
     "import seaborn as sns\n",
     "from matplotlib import gridspec"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2)Data collecting process\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#loading csv data to pandas dataframe\n",
+    "data = pd.read_csv('C:\\\\Users\\\\Ravindi\\\\Downloads\\\\archive\\\\creditcard.csv')"
+   ]
   }
  ],
  "metadata": {
