Explore the dataset - target value counts

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -618,6 +618,37 @@
     "#checking for missing values\n",
     "data.isnull().sum()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**checking the distribution of target variable** <br>\n",
+    "1 ---> Fraud (492) <br>\n",
+    "0 ---> Not Fraud (284315)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    284315\n",
+       "1       492\n",
+       "Name: Class, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Class'].value_counts()"
+   ]
   }
  ],
  "metadata": {
