Splitting data into train and test - print data shape

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -1168,6 +1168,23 @@
    "source": [
     "X_train,X_test,Y_train,Y_test = train_test_split(x,y,test_size = 0.2,stratify= y,random_state= 2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(284807, 30) (227845, 30) (56962, 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.shape,X_train.shape,X_test.shape)"
+   ]
   }
  ],
  "metadata": {
