Model training - model variable

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -37,7 +37,10 @@
     "from sklearn.metrics import accuracy_score #evaluvate model\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from matplotlib import gridspec"
+    "from matplotlib import gridspec\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n"
    ]
   },
   {
@@ -1162,16 +1165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train,X_test,Y_train,Y_test = train_test_split(x,y,test_size = 0.2,stratify= y,random_state= 2)"
+    "X_train,X_test,Y_train,Y_test = train_test_split(x,y,test_size = 0.2,stratify= y,random_state= 42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1195,11 +1198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LogisticRegression()"
+    "model = make_pipeline(StandardScaler(), LogisticRegression())"
    ]
   }
  ],
