Model training - model fit

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -1204,6 +1204,29 @@
    "source": [
     "model = make_pipeline(StandardScaler(), LogisticRegression())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('standardscaler', StandardScaler()),\n",
+       "                ('logisticregression', LogisticRegression())])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, Y_train)  # apply scaling on training data\n",
+    "Pipeline(steps=[('standardscaler', StandardScaler()),\n",
+    "                ('logisticregression', LogisticRegression())])"
+   ]
   }
  ],
  "metadata": {
