--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -1247,6 +1247,26 @@
    "source": [
     "model.score(X_test, Y_test)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9)Model eveuation\n",
+    "* Accuracy on training data :  **99.89 %**\n",
+    "* Accuracy on test data :  **99.91 %**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#accuracy on training data\n",
+    "X_train_prediction = model.predict(X_train)\n",
+    "training_data_accuracy = accuracy_score(X_train_prediction,Y_train)"
+   ]
   }
  ],
  "metadata": {
