Model eveuation - Accuracy on training data

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -1267,6 +1267,23 @@
     "X_train_prediction = model.predict(X_train)\n",
     "training_data_accuracy = accuracy_score(X_train_prediction,Y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on training data :  99.92 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy on training data : ', round(training_data_accuracy*100, 2),'%')"
+   ]
   }
  ],
  "metadata": {
