Model eveuation - Accuracy on test data

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -1284,6 +1284,34 @@
    "source": [
     "print('Accuracy on training data : ', round(training_data_accuracy*100, 2),'%')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#accuracy on test data\n",
+    "X_test_prediction = model.predict(X_test)\n",
+    "test_data_accuracy = accuracy_score(X_test_prediction,Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on test data :  99.92 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy on test data : ', round(test_data_accuracy*100, 2),'%')"
+   ]
   }
  ],
  "metadata": {
