Building credit card fraud system - test not fraud

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -40,7 +40,9 @@
     "from matplotlib import gridspec\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import Pipeline\n"
+    "from sklearn.pipeline import Pipeline\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n"
    ]
   },
   {
@@ -1311,6 +1313,51 @@
    ],
    "source": [
     "print('Accuracy on test data : ', round(test_data_accuracy*100, 2),'%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10)Building credit card fraud system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Not Fraud**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This Credit Card Transaction is Not Fraud\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_data = (0,-1.359807134,-0.072781173,2.536346738,1.378155224,-0.33832077,0.462387778,0.239598554,0.098697901,0.36378697,0.090794172,-0.551599533,-0.617800856,-0.991389847,-0.311169354,1.468176972,-0.470400525,0.207971242,0.02579058,0.40399296,0.251412098,-0.018306778,0.277837576,-0.11047391,0.066928075,0.128539358,-0.189114844,0.133558377,-0.021053053,149.62)\n",
+    "\n",
+    "#change input data to numpy array\n",
+    "input_data_as_numpy_array = np.asarray(input_data)\n",
+    "\n",
+    "#reshape the numpy array as we are predicting for only on instance\n",
+    "\n",
+    "input_data_reshaped = input_data_as_numpy_array.reshape(1,-1)\n",
+    "\n",
+    "detect = model.predict(input_data_reshaped)\n",
+    "\n",
+    "if(detect == 0):\n",
+    "  print(\"This Credit Card Transaction is Not Fraud\")\n",
+    "else:\n",
+    "  print(\"This Credit Card Transaction is Fraud\")"
    ]
   }
  ],
