trainging the LR model with traing data

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -1208,6 +1208,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(max_iter=1000)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#trainging the LR model with traing data\n",
+    "model.fit(X_train,Y_train)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
