Building credit card fraud system test fraud

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -1233,13 +1233,13 @@
    "metadata": {},
    "source": [
     "## 9)Model eveuation\n",
-    "* Accuracy on training data :  **99.89 %**\n",
+    "* Accuracy on training data :  **99.92 %**\n",
     "* Accuracy on test data :  **99.91 %**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1278,14 +1278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on test data :  99.92 %\n"
+      "Accuracy on test data :  99.91 %\n"
      ]
     }
    ],
@@ -1309,13 +1309,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Output value is [0]\n",
       "This Credit Card Transaction is Not Fraud\n"
      ]
     }
@@ -1331,7 +1332,46 @@
     "input_data_reshaped = input_data_as_numpy_array.reshape(1,-1)\n",
     "\n",
     "detect = model.predict(input_data_reshaped)\n",
+    "print(\"Output value is\",detect)\n",
+    "if(detect == 0):\n",
+    "  print(\"This Credit Card Transaction is Not Fraud\")\n",
+    "else:\n",
+    "  print(\"This Credit Card Transaction is Fraud\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Fraud**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output value is [1]\n",
+      "This Credit Card Transaction is Fraud\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_data = (406,-2.312226542,1.951992011,-1.609850732,3.997905588,-0.522187865,-1.426545319,-2.537387306,1.391657248,-2.770089277,-2.772272145,3.202033207,-2.899907388,-0.595221881,-4.289253782,0.38972412,-1.14074718,-2.830055675,-0.016822468,0.416955705,0.126910559,0.517232371,-0.035049369,-0.465211076,0.320198199,0.044519167,0.177839798,0.261145003,-0.143275875,0)\n",
     "\n",
+    "#change input data to numpy array\n",
+    "input_data_as_numpy_array = np.asarray(input_data)\n",
+    "\n",
+    "#reshape the numpy array as we are predicting for only on instance\n",
+    "\n",
+    "input_data_reshaped = input_data_as_numpy_array.reshape(1,-1)\n",
+    "\n",
+    "detect = model.predict(input_data_reshaped)\n",
+    "print(\"Output value is\",detect)\n",
     "if(detect == 0):\n",
     "  print(\"This Credit Card Transaction is Not Fraud\")\n",
     "else:\n",
