Building credit card fraud system testing

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -1304,7 +1304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Not Fraud**"
+    "**Testing - Not Fraud**"
    ]
   },
   {
@@ -1343,7 +1343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Fraud**"
+    "**Testing - Fraud**"
    ]
   },
   {
