--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -999,7 +999,7 @@
     }
    ],
    "source": [
-    "# distribution of anomalous features - Histogram\n",
+    "# Distribution of anomalous features - Histogram\n",
     "features = data.iloc[:,0:28].columns\n",
     "plt.figure(figsize=(12,28*4))\n",
     "gs = gridspec.GridSpec(28, 1)\n",
@@ -1381,10 +1381,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "d9a6414fa631c028c434667d182c0b79dc634ffcd06f52fc304061a2c0b9ef26"
+   "hash": "7f8afb2d7b3026204e11418d8a058c21c68a056dd36e2cb6f21e73eeca131337"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1398,7 +1398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
