Checking for missing values

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -620,7 +620,7 @@
     }
    ],
    "source": [
-    "#checking for missing values\n",
+    "#Checking for missing values\n",
     "data.isnull().sum()"
    ]
   },
