Importing the dependacies

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -30,6 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing the dependacies\n",
+    "\n",
     "import numpy as np #numpy arrays\n",
     "import pandas as pd #use to dataframe\n",
     "from sklearn.model_selection import train_test_split #split data\n",
