Loading csv data to pandas dataframe

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#loading csv data to pandas dataframe\n",
+    "#Loading csv data to pandas dataframe\n",
     "data = pd.read_csv('..\\ML_Assignment2_IT18198232_IT18203554_IT18202632_IT18214376\\\\creditcard.csv')"
    ]
   },
