Print first five rows of dataset

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -277,7 +277,7 @@
     }
    ],
    "source": [
-    "#print first five rows of dataset\n",
+    "#Print first five rows of dataset\n",
     "data.head()"
    ]
   },
