Print first five rows of dataset

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -494,7 +494,7 @@
     }
    ],
    "source": [
-    "#print last five rows of dataset\n",
+    "#Print last five rows of dataset\n",
     "data.tail()"
    ]
   },
