Getting some info about the data

--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -570,7 +570,7 @@
     }
    ],
    "source": [
-    "#getting some info about the data\n",
+    "#Getting some info about the data\n",
     "data.info()"
    ]
   },
