--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -622,7 +622,7 @@
     }
    ],
    "source": [
-    "#Checking for missing values\n",
+    "#Checking for the missing values\n",
     "data.isnull().sum()"
    ]
   },
