--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1200,25 +1200,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LogisticRegression(max_iter=1000)"
+    "model = LogisticRegression(C=1.0, class_weight=\"balanced\", dual=False, fit_intercept=True,  \n",
+    "                   intercept_scaling=1, l1_ratio=None, max_iter=500,  \n",
+    "                   multi_class='ovr', n_jobs=None, penalty='l2',  \n",
+    "                   random_state=42, solver='sag', tol=0.0001, verbose=0,  \n",
+    "                   warm_start=False)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(max_iter=1000)"
+       "LogisticRegression(max_iter=500, multi_class='ovr', random_state=42,\n",
+       "                   solver='sag')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,14 +1255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on training data :  99.9 %\n"
+      "Accuracy on training data :  99.83 %\n"
      ]
     }
    ],
@@ -1267,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1278,14 +1283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on test data :  99.92 %\n"
+      "Accuracy on test data :  99.83 %\n"
      ]
     }
    ],
@@ -1309,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
