--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -30,8 +30,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Importing the dependacies\n",
-    "\n",
     "import numpy as np #numpy arrays\n",
     "import pandas as pd #use to dataframe\n",
     "from sklearn.model_selection import train_test_split #split data\n",
@@ -60,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Loading csv data to pandas dataframe\n",
+    "#loading csv data to pandas dataframe\n",
     "data = pd.read_csv('..\\ML_Assignment2_IT18198232_IT18203554_IT18202632_IT18214376\\\\creditcard.csv')"
    ]
   },
@@ -277,7 +275,7 @@
     }
    ],
    "source": [
-    "#Print first five rows of dataset\n",
+    "#print first five rows of dataset\n",
     "data.head()"
    ]
   },
@@ -494,7 +492,7 @@
     }
    ],
    "source": [
-    "#Print last five rows of dataset\n",
+    "#print last five rows of dataset\n",
     "data.tail()"
    ]
   },
@@ -570,7 +568,7 @@
     }
    ],
    "source": [
-    "#Getting some info about the data\n",
+    "#getting some info about the data\n",
     "data.info()"
    ]
   },
@@ -622,7 +620,7 @@
     }
    ],
    "source": [
-    "#Checking for the missing values\n",
+    "#checking for missing values\n",
     "data.isnull().sum()"
    ]
   },
@@ -1001,7 +999,7 @@
     }
    ],
    "source": [
-    "# Distribution of anomalous features - Histogram\n",
+    "# distribution of anomalous features - Histogram\n",
     "features = data.iloc[:,0:28].columns\n",
     "plt.figure(figsize=(12,28*4))\n",
     "gs = gridspec.GridSpec(28, 1)\n",
@@ -1055,10 +1053,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#droping class feature\n",
     "x = data.drop(columns='Class',axis=1)\n",
     "y = data['Class']"
    ]
@@ -1169,10 +1168,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#spliting the dataset\n",
+    "#test size = 0.20\n",
     "X_train,X_test,Y_train,Y_test = train_test_split(x,y,test_size = 0.20,stratify= y,random_state= 42)"
    ]
   },
@@ -1202,30 +1203,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LogisticRegression(C=1.0, class_weight=\"balanced\", dual=False, fit_intercept=True,  \n",
-    "                   intercept_scaling=1, l1_ratio=None, max_iter=500,  \n",
-    "                   multi_class='ovr', n_jobs=None, penalty='l2',  \n",
-    "                   random_state=42, solver='sag', tol=0.0001, verbose=0,  \n",
+    "#LR model --> \n",
+    "model = LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,  \n",
+    "                   intercept_scaling=1, l1_ratio=None, max_iter=300,  \n",
+    "                   multi_class='multinomial', n_jobs=None, penalty='l2',  \n",
+    "                   random_state=42, solver='lbfgs', tol=0.0001, verbose=0,  \n",
     "                   warm_start=False)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(max_iter=500, multi_class='ovr', random_state=42,\n",
-       "                   solver='sag')"
+       "LogisticRegression(max_iter=300, multi_class='multinomial', random_state=42)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,13 +1241,13 @@
    "metadata": {},
    "source": [
     "## 9)Model eveuation\n",
-    "* Accuracy on training data :  **99.9 %**\n",
-    "* Accuracy on test data :  **99.92 %**"
+    "* Accuracy on training data :  **99.92 %**\n",
+    "* Accuracy on test data :  **99.93 %**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,14 +1258,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on training data :  99.83 %\n"
+      "Accuracy on training data :  99.92 %\n"
      ]
     }
    ],
@@ -1274,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1285,14 +1286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on test data :  99.83 %\n"
+      "Accuracy on test data :  99.93 %\n"
      ]
     }
    ],
@@ -1388,10 +1389,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "7f8afb2d7b3026204e11418d8a058c21c68a056dd36e2cb6f21e73eeca131337"
+   "hash": "d9a6414fa631c028c434667d182c0b79dc634ffcd06f52fc304061a2c0b9ef26"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1405,7 +1406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
