--- a/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
+++ b/Logistic_Regression_Model_For_Credit_Card_Fraud_Detection.ipynb
@@ -513,7 +513,7 @@
     }
    ],
    "source": [
-    "#Check rows and cols in dataset\n",
+    "#Check rows and colums in dataset\n",
     "data.shape"
    ]
   },
@@ -652,7 +652,7 @@
     }
    ],
    "source": [
-    "data['Class'].value_counts()"
+    "data['Class'].value_counts()\n"
    ]
   },
   {
