--- a/CreditCardFraudDetectionUsingRandomForest.ipynb
+++ b/CreditCardFraudDetectionUsingRandomForest.ipynb
@@ -45,7 +45,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "#data = pd.read_csv(\"/content/input/creditcardfraud/creditcard.csv\")\n",
+    "data = pd.read_csv('./creditcard.csv')"
+   ]
   },
   {
    "cell_type": "code",
