--- a/CreditCardFraudDetectionUsingRandomForest.ipynb
+++ b/CreditCardFraudDetectionUsingRandomForest.ipynb
@@ -499,10 +499,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amount details of fradulent transacation\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "count     492.000000\n",
+       "mean      122.211321\n",
+       "std       256.683288\n",
+       "min         0.000000\n",
+       "25%         1.000000\n",
+       "50%         9.250000\n",
+       "75%       105.890000\n",
+       "max      2125.870000\n",
+       "Name: Amount, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Amount details of fradulent transacation\")\n",
+    "Fraud.Amount.describe()"
+   ]
   },
   {
    "cell_type": "code",
