--- a/CreditCardFraudDetectionUsingRandomForest.ipynb
+++ b/CreditCardFraudDetectionUsingRandomForest.ipynb
@@ -535,10 +535,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amount details of valid transaction\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "count    284315.000000\n",
+       "mean         88.291022\n",
+       "std         250.105092\n",
+       "min           0.000000\n",
+       "25%           5.650000\n",
+       "50%          22.000000\n",
+       "75%          77.050000\n",
+       "max       25691.160000\n",
+       "Name: Amount, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Amount details of valid transaction\")\n",
+    "Valid.Amount.describe()"
+   ]
   },
   {
    "cell_type": "code",
