--- a/CreditCardFraudDetectionUsingRandomForest.ipynb
+++ b/CreditCardFraudDetectionUsingRandomForest.ipynb
@@ -598,10 +598,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(284807, 30)\n",
+      "(284807,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#seperating the X and the Y from the dataset\n",
+    "X=data.drop(['Class'], axis=1)\n",
+    "Y=data[\"Class\"]\n",
+    "print(X.shape)\n",
+    "print(Y.shape)\n",
+    "#getting just the values for the sake of processing (its a numpy array with no columns)\n",
+    "X_data=X.values\n",
+    "Y_data=Y.values"
+   ]
   },
   {
    "cell_type": "code",
