--- a/CreditCardFraudDetectionUsingRandomForest.ipynb
+++ b/CreditCardFraudDetectionUsingRandomForest.ipynb
@@ -662,10 +662,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Using Skicit-learn to split data into training and testing sets\r\n",
+    "from sklearn.model_selection import train_test_split\r\n",
+    "# Split the data into training and testing sets\r\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_data, Y_data, test_size = 0.2, random_state = 42)"
+   ]
   },
   {
    "cell_type": "code",
