--- a/CreditCardFraudDetectionUsingRandomForest.ipynb
+++ b/CreditCardFraudDetectionUsingRandomForest.ipynb
@@ -666,9 +666,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using Skicit-learn to split data into training and testing sets\r\n",
-    "from sklearn.model_selection import train_test_split\r\n",
-    "# Split the data into training and testing sets\r\n",
+    "# Using Skicit-learn to split data into training and testing sets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "# Split the data into training and testing sets\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X_data, Y_data, test_size = 0.2, random_state = 42)"
    ]
   },
@@ -678,7 +678,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import classification_report, accuracy_score,precision_score,recall_score,f1_score,matthews_corrcoef\r\n",
+    "from sklearn.metrics import classification_report, accuracy_score,precision_score,recall_score,f1_score,matthews_corrcoef\n",
     "from sklearn.metrics import confusion_matrix"
    ]
   },
@@ -694,7 +694,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Building another model/classifier ISOLATION FOREST\n",
+    "from sklearn.ensemble import IsolationForest\n",
+    "ifc=IsolationForest(max_samples=len(X_train),\n",
+    "                    contamination=outlier_fraction,random_state=1)\n",
+    "ifc.fit(X_train)\n",
+    "scores_pred = ifc.decision_function(X_train)\n",
+    "y_pred = ifc.predict(X_test)\n",
+    "\n",
+    "\n",
+    "# Reshape the prediction values to 0 for valid, 1 for fraud. \n",
+    "y_pred[y_pred == 1] = 0\n",
+    "y_pred[y_pred == -1] = 1\n",
+    "\n",
+    "n_errors = (y_pred != Y_test).sum()"
+   ]
   },
   {
    "cell_type": "code",
