--- a/CreditCardFraudDetectionUsingRandomForest.ipynb
+++ b/CreditCardFraudDetectionUsingRandomForest.ipynb
@@ -716,6 +716,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#evaluation of the model\n",
+    "#printing every score of the classifier\n",
+    "#scoring in any thing\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "n_outliers = len(Fraud)\n",
+    "print(\"the Model used is {}\".format(\"Isolation Forest\"))\n",
+    "acc= accuracy_score(Y_test,y_pred)\n",
+    "print(\"The accuracy is  {}\".format(acc))\n",
+    "prec= precision_score(Y_test,y_pred)\n",
+    "print(\"The precision is {}\".format(prec))\n",
+    "rec= recall_score(Y_test,y_pred)\n",
+    "print(\"The recall is {}\".format(rec))\n",
+    "f1= f1_score(Y_test,y_pred)\n",
+    "print(\"The F1-Score is {}\".format(f1))\n",
+    "MCC=matthews_corrcoef(Y_test,y_pred)\n",
+    "print(\"The Matthews correlation coefficient is{}\".format(MCC))\n",
+    "\n",
+    "#printing the confusion matrix\n",
+    "LABELS = ['Normal', 'Fraud']\n",
+    "conf_matrix = confusion_matrix(Y_test, y_pred)\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "sns.heatmap(conf_matrix, xticklabels=LABELS,\n",
+    "            yticklabels=LABELS, annot=True, fmt=\"d\");\n",
+    "plt.title(\"Confusion matrix\")\n",
+    "plt.ylabel('True class')\n",
+    "plt.xlabel('Predicted class')\n",
+    "plt.show()\n",
+    "\n",
+    "# Run classification metrics\n",
+    "plt.figure(figsize=(9, 7))\n",
+    "print('{}: {}'.format(\"Isolation Forest\", n_errors))\n",
+    "print(accuracy_score(Y_test, y_pred))\n",
+    "print(classification_report(Y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
