--- a/CreditCardFraudDetectionUsingRandomForest.ipynb
+++ b/CreditCardFraudDetectionUsingRandomForest.ipynb
@@ -765,7 +765,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Building the Random Forest Classifier (RANDOM FOREST)\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "# random forest model creation\n",
+    "rfc = RandomForestClassifier()\n",
+    "rfc.fit(X_train,Y_train)\n",
+    "# predictions\n",
+    "y_pred = rfc.predict(X_test)"
+   ]
   },
   {
    "cell_type": "code",
