--- a/CreditCardFraudDetectionUsingRandomForest.ipynb
+++ b/CreditCardFraudDetectionUsingRandomForest.ipynb
@@ -780,7 +780,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Evaluating the classifier\n",
+    "#printing every score of the classifier\n",
+    "#scoring in any thing\n",
+    "from sklearn.metrics import classification_report, accuracy_score,precision_score,recall_score,f1_score,matthews_corrcoef\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "n_outliers = len(Fraud)\n",
+    "n_errors = (y_pred != Y_test).sum()\n",
+    "print(\"The model used is Random Forest classifier\")\n",
+    "acc= accuracy_score(Y_test,y_pred)\n",
+    "print(\"The accuracy is  {}\".format(acc))\n",
+    "prec= precision_score(Y_test,y_pred)\n",
+    "print(\"The precision is {}\".format(prec))\n",
+    "rec= recall_score(Y_test,y_pred)\n",
+    "print(\"The recall is {}\".format(rec))\n",
+    "f1= f1_score(Y_test,y_pred)\n",
+    "print(\"The F1-Score is {}\".format(f1))\n",
+    "MCC=matthews_corrcoef(Y_test,y_pred)\n",
+    "print(\"The Matthews correlation coefficient is {}\".format(MCC))\n",
+    "\n",
+    "\n",
+    "#printing the confusion matrix\n",
+    "LABELS = ['Normal', 'Fraud']\n",
+    "conf_matrix = confusion_matrix(Y_test, y_pred)\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "sns.heatmap(conf_matrix, xticklabels=LABELS, yticklabels=LABELS, annot=True, fmt=\"d\");\n",
+    "plt.title(\"Confusion matrix\")\n",
+    "plt.ylabel('True class')\n",
+    "plt.xlabel('Predicted class')\n",
+    "plt.show()\n",
+    "\n",
+    "# Run classification metrics\n",
+    "plt.figure(figsize=(9, 7))\n",
+    "print('{}: {}'.format(\"Random Forest\", n_errors))\n",
+    "print(accuracy_score(Y_test, y_pred))\n",
+    "print(classification_report(Y_test, y_pred))"
+   ]
   },
   {
    "cell_type": "code",
