--- a/CreditCardFraudDetectionUsingRandomForest.ipynb
+++ b/CreditCardFraudDetectionUsingRandomForest.ipynb
@@ -959,10 +959,11 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b89b5cfaba6639976dc87ff2fec6d58faec662063367e2c229c520fe71072417"
+   "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
   },
   "kernelspec": {
    "display_name": "Python 3.10.1 64-bit",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
